# vaccine_helper

./: .gitignore  Cargo.toml  Justfile  README.md  TODO  index.html  instructions  shell.nix  vaccine_helper.js
.github/workflows/: pages.yml  rust.yml
assets/: sw.js
src/: app.rs  lib.rs  main.rs  schedule.rs  ser_native.rs  ser_web.rs
