[package]
name = "vaccine_helper"
version = "0.1.0"
authors = ["Terrence Cole <terrence.d.cole@gmail.com>"]
edition = "2021"
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]
rust-version = "1.87"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[dependencies]
anyhow = "1"
chrono = "0.4" # used by DatePicker
egui = "0.31"
egui_dnd = "0.12"
egui_extras = { version = "0.31", features = ["datepicker", "image", "serde"] }
eframe = { version = "0.31", default-features = false, features = [
    "accesskit", # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow", # Use the glow rendering backend. Alternative: "wgpu".
    "persistence", # Enable restoring app state when restarting the app.
    "wayland", # To support Linux (and CI)
    "x11", # To support older Linux distributions (restores one of the default features)
] }
itertools = "0.14"
jiff = { version = "0.2", features = ["js", "serde", "std"] }
log = "0.4.27"
ron = ">= 0.8.1"
serde = { version = "1.0.219", features = ["derive"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rfd = "0.15"
env_logger = "0.11.8"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.70", features = [
    "Blob", "BlobPropertyBag", "HtmlAnchorElement", "HtmlInputElement", "File", "FileReader",
    "FileList", "Url"] }

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
